--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
         </div>
     </div>
 </div>
-<script src="js/script.js"></script>
+<script src="js/script.js" type="module"></script>
 </body>
 </html>
