--- a/index.html
+++ b/index.html
@@ -23,46 +23,10 @@
             <button class="button user-info__button">+</button>
         </div>
     </div>
-    <div class="places-list root__section">
 
+    <div class="places-list root__section"></div>
+    <div class="popup-container"></div>
 
-    </div>
-    <div class="popup-container">
-
-    </div>
-<!--    <div class="popup" id="add-card">-->
-<!--        <div class="popup__content">-->
-<!--            <img src="./images/close.svg" alt="" class="popup__close">-->
-<!--            <h3 class="popup__title">Новое место</h3>-->
-<!--            <form class="popup__form" name="new">-->
-<!--                <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Название">-->
-<!--                <div class="popup__input-error" aria-live="polite" id="error-card-name"></div>-->
-<!--                <input type="text" name="link" class="popup__input popup__input_type_link-url"-->
-<!--                       placeholder="Ссылка на картинку">-->
-<!--                <div class="popup__input-error" aria-live="polite" id="error-card-link"></div>-->
-<!--                <button type class="button popup__button">+</button>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="popup" id="profile">-->
-<!--        <div class="popup__content">-->
-<!--            <img src="./images/close.svg" alt="" class="popup__close">-->
-<!--            <h3 class="popup__title">Редактировать профиль</h3>-->
-<!--            <form class="popup__form" name="profile">-->
-<!--                <input type="text" name="name" class="popup__input" placeholder="Имя">-->
-<!--                <div class="popup__input-error" aria-live="polite" id="error-profile-name"></div>-->
-<!--                <input type="text" name="job" class="popup__input" placeholder="О себе">-->
-<!--                <div class="popup__input-error" aria-live="polite" id="error-profile-job"></div>-->
-<!--                <button type class="button popup__button popup__button_text18">Сохранить</button>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="popup" id="big-size-image">-->
-<!--        <div class="popup__content-image">-->
-<!--            <img src="./images/close.svg" alt="" class="popup__close">-->
-<!--            <img src="https://images.unsplash.com/photo-1560098332-0455d6f13087" class="popup__image">-->
-<!--        </div>-->
-<!--    </div>-->
 </div>
 <script src="js/script.js" type="module"></script>
 </body>
